--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,20 @@
-name: CI
-on: [push]
+name: Super-Linter
+
+on: [push, pull_request]
+
 jobs:
-  eslint:
+  super-lint:
     name: Lint code base
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         
       - name: Install packages
         run: npm ci
-      - name: Run ESlint
-        run: npm run lint
+
+      - name: Run Super-Linter
+        uses: github/super-linter@v3
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
